--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-modernist
-title: Mi página personal
-description: mi primera página
+title: Ferdinand Pineda
+description: Proyectos
