--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
-title: Ferdinand Pineda
-description: [A short description of your site's purpose]
+title: Midnight theme
+description: Midnight is a theme for GitHub Pages.
+theme: jekyll-theme-midnight
