--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
-theme: jekyll-theme-midnight
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+theme: jekyll-theme-cayman
