--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+description: Inteligencia artificial, redes de datos, remote sensing
 theme: jekyll-theme-cayman
